[tool.poetry]
name = "print-color"
version = "0.3.0"
description = "A simple package to print in color to the terminal"
authors = ["xy3 <a@xsq.pw>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/xy3/print-color"
repository = "https://github.com/xy3/print-color"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
