[project]
name = "print-color"
version = "0.4.6"
description = "A simple package to print in color to the terminal"
authors = [{name="xy3", email="a@xsq.pw"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/xy3/print-color"
Repository = "https://github.com/xy3/print-color"

[project.optional-dependencies]
dev = ["pytest"]

